parser/SCSSParser.ts
// Generated from SCSSParser.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import SCSSParserListener from "./SCSSParserListener.js";
import SCSSParserVisitor from "./SCSSParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class SCSSParser extends Parser {
	public static readonly Comment = 1;
	public static readonly MultiLineComment = 2;
	public static readonly LineComment = 3;
	public static readonly Space = 4;
	public static readonly Uri = 5;
	public static readonly Format = 6;
	public static readonly AbsLength = 7;
	public static readonly FontRelative = 8;
	public static readonly ViewportRelative = 9;
	public static readonly Angle = 10;
	public static readonly Resolution = 11;
	public static readonly Freq = 12;
	public static readonly Time = 13;
	public static readonly Percentage = 14;
	public static readonly Import = 15;
	public static readonly Include = 16;
	public static readonly Use = 17;
	public static readonly Require = 18;
	public static readonly Charset = 19;
	public static readonly Mixin = 20;
	public static readonly Function = 21;
	public static readonly FontFace = 22;
	public static readonly Forward = 23;
	public static readonly Content = 24;
	public static readonly Keyframes = 25;
	public static readonly Return = 26;
	public static readonly Media = 27;
	public static readonly Extend = 28;
	public static readonly Warn = 29;
	public static readonly Error = 30;
	public static readonly If = 31;
	public static readonly AtIf = 32;
	public static readonly AtFor = 33;
	public static readonly AtElse = 34;
	public static readonly AtWhile = 35;
	public static readonly AtEach = 36;
	public static readonly From = 37;
	public static readonly To = 38;
	public static readonly Through = 39;
	public static readonly Only = 40;
	public static readonly Not = 41;
	public static readonly And = 42;
	public static readonly Using = 43;
	public static readonly As = 44;
	public static readonly With = 45;
	public static readonly Or = 46;
	public static readonly In = 47;
	public static readonly Default = 48;
	public static readonly Important = 49;
	public static readonly Lparen = 50;
	public static readonly Rparen = 51;
	public static readonly Lbrack = 52;
	public static readonly Rbrack = 53;
	public static readonly BlockStart = 54;
	public static readonly BlockEnd = 55;
	public static readonly Dot = 56;
	public static readonly Comma = 57;
	public static readonly Colon = 58;
	public static readonly Semi = 59;
	public static readonly Tilde = 60;
	public static readonly Under = 61;
	public static readonly Dollar = 62;
	public static readonly At = 63;
	public static readonly Amp = 64;
	public static readonly Hash = 65;
	public static readonly True = 66;
	public static readonly False = 67;
	public static readonly Plus = 68;
	public static readonly Div = 69;
	public static readonly Minus = 70;
	public static readonly Times = 71;
	public static readonly Eq = 72;
	public static readonly NotEq = 73;
	public static readonly Greater = 74;
	public static readonly Less = 75;
	public static readonly Includes = 76;
	public static readonly DashMatch = 77;
	public static readonly Pipe = 78;
	public static readonly Cdo = 79;
	public static readonly Cdc = 80;
	public static readonly PseudoNot = 81;
	public static readonly Calc = 82;
	public static readonly Rotate = 83;
	public static readonly Var = 84;
	public static readonly Rgba = 85;
	public static readonly Repeat = 86;
	public static readonly PrefixMatch = 87;
	public static readonly SuffixMatch = 88;
	public static readonly SubstringMatch = 89;
	public static readonly VendorPrefix = 90;
	public static readonly Variable = 91;
	public static readonly Number = 92;
	public static readonly String_ = 93;
	public static readonly Ident = 94;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_stylesheet = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_importDeclaration = 2;
	public static readonly RULE_importPath = 3;
	public static readonly RULE_asClause = 4;
	public static readonly RULE_withClause = 5;
	public static readonly RULE_variableDeclaration = 6;
	public static readonly RULE_variableValue = 7;
	public static readonly RULE_variableName = 8;
	public static readonly RULE_namespace_ = 9;
	public static readonly RULE_propertyDeclaration = 10;
	public static readonly RULE_prio = 11;
	public static readonly RULE_propertyValue = 12;
	public static readonly RULE_mediaDeclaration = 13;
	public static readonly RULE_mediaQueryList = 14;
	public static readonly RULE_mediaQuery = 15;
	public static readonly RULE_mediaExpression = 16;
	public static readonly RULE_mixinDeclaration = 17;
	public static readonly RULE_contentDeclaration = 18;
	public static readonly RULE_fontFaceDeclaration = 19;
	public static readonly RULE_keyframesDeclaration = 20;
	public static readonly RULE_keyframesBlock = 21;
	public static readonly RULE_percentageStatement = 22;
	public static readonly RULE_includeDeclaration = 23;
	public static readonly RULE_interpolationDeclaration = 24;
	public static readonly RULE_extendDeclaration = 25;
	public static readonly RULE_warndingDeclaration = 26;
	public static readonly RULE_errorDeclaration = 27;
	public static readonly RULE_atStatementDeclaration = 28;
	public static readonly RULE_ruleset = 29;
	public static readonly RULE_block = 30;
	public static readonly RULE_selectorGroup = 31;
	public static readonly RULE_selector = 32;
	public static readonly RULE_combinator = 33;
	public static readonly RULE_selectorSequence = 34;
	public static readonly RULE_id = 35;
	public static readonly RULE_typeSelector = 36;
	public static readonly RULE_typeNamespacePrefix = 37;
	public static readonly RULE_universal = 38;
	public static readonly RULE_className = 39;
	public static readonly RULE_interpolation = 40;
	public static readonly RULE_parentRef = 41;
	public static readonly RULE_attrib = 42;
	public static readonly RULE_pseudo = 43;
	public static readonly RULE_functionalPseudo = 44;
	public static readonly RULE_pseudoParameter = 45;
	public static readonly RULE_negation = 46;
	public static readonly RULE_negationArg = 47;
	public static readonly RULE_operator_ = 48;
	public static readonly RULE_value = 49;
	public static readonly RULE_functionDeclaration = 50;
	public static readonly RULE_parameters = 51;
	public static readonly RULE_parameter = 52;
	public static readonly RULE_functionBody = 53;
	public static readonly RULE_functionReturn = 54;
	public static readonly RULE_functionStatement = 55;
	public static readonly RULE_functionCall = 56;
	public static readonly RULE_expression = 57;
	public static readonly RULE_expressionPart = 58;
	public static readonly RULE_ifExpression = 59;
	public static readonly RULE_listDeclaration = 60;
	public static readonly RULE_listCommaSeparated = 61;
	public static readonly RULE_listSpaceSeparated = 62;
	public static readonly RULE_listBracketed = 63;
	public static readonly RULE_listElement = 64;
	public static readonly RULE_mapDeclaration = 65;
	public static readonly RULE_mapEntries = 66;
	public static readonly RULE_mapEntry = 67;
	public static readonly RULE_mapKey = 68;
	public static readonly RULE_mapValue = 69;
	public static readonly RULE_ifDeclaration = 70;
	public static readonly RULE_elseIfStatement = 71;
	public static readonly RULE_elseStatement = 72;
	public static readonly RULE_forDeclaration = 73;
	public static readonly RULE_through = 74;
	public static readonly RULE_whileDeclaration = 75;
	public static readonly RULE_eachDeclaration = 76;
	public static readonly RULE_eachValueList = 77;
	public static readonly RULE_var_ = 78;
	public static readonly RULE_calc = 79;
	public static readonly RULE_rotate = 80;
	public static readonly RULE_rgba = 81;
	public static readonly RULE_repeat = 82;
	public static readonly RULE_unit = 83;
	public static readonly RULE_length = 84;
	public static readonly RULE_dimension = 85;
	public static readonly RULE_percentage = 86;
	public static readonly RULE_degree = 87;
	public static readonly RULE_measurment = 88;
	public static readonly RULE_uri = 89;
	public static readonly RULE_arglist = 90;
	public static readonly RULE_plusMinus = 91;
	public static readonly RULE_hexcolor = 92;
	public static readonly RULE_color = 93;
	public static readonly RULE_boolean = 94;
	public static readonly RULE_number = 95;
	public static readonly RULE_identifier = 96;
	public static readonly literalNames: (string | null)[] = [ null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            "'%'", "'@import'", 
                                                            "'@include'", 
                                                            "'@use'", "'@require'", 
                                                            "'@charset '", 
                                                            "'@mixin'", 
                                                            "'@function'", 
                                                            "'@font-face'", 
                                                            "'@forward'", 
                                                            "'@content'", 
                                                            "'@keyframes'", 
                                                            "'@return'", 
                                                            "'@media'", 
                                                            "'@extend'", 
                                                            "'@warn'", "'@error'", 
                                                            "'if'", "'@if'", 
                                                            "'@for'", "'@else'", 
                                                            "'@while'", 
                                                            "'@each'", "'from'", 
                                                            "'to'", "'through'", 
                                                            "'only'", "'not'", 
                                                            "'and'", "'using'", 
                                                            "'as'", "'with'", 
                                                            "'or'", "'in'", 
                                                            "'!default'", 
                                                            "'!important'", 
                                                            "'('", "')'", 
                                                            "'['", "']'", 
                                                            "'{'", "'}'", 
                                                            "'.'", "','", 
                                                            "':'", "';'", 
                                                            "'~'", "'_'", 
                                                            "'$'", "'@'", 
                                                            "'&'", "'#'", 
                                                            "'true'", "'false'", 
                                                            "'+'", "'/'", 
                                                            "'-'", "'*'", 
                                                            "'='", "'!='", 
                                                            "'>'", "'<'", 
                                                            "'~='", "'|='", 
                                                            "'|'", "'<!--'", 
                                                            "'-->'", "':not('", 
                                                            "'calc('", "'rotate('", 
                                                            "'var('", "'rgba('", 
                                                            "'repeat('", 
                                                            "'^='", "'$='", 
                                                            "'*='" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "Comment", 
                                                             "MultiLineComment", 
                                                             "LineComment", 
                                                             "Space", "Uri", 
                                                             "Format", "AbsLength", 
                                                             "FontRelative", 
                                                             "ViewportRelative", 
                                                             "Angle", "Resolution", 
                                                             "Freq", "Time", 
                                                             "Percentage", 
                                                             "Import", "Include", 
                                                             "Use", "Require", 
                                                             "Charset", 
                                                             "Mixin", "Function", 
                                                             "FontFace", 
                                                             "Forward", 
                                                             "Content", 
                                                             "Keyframes", 
                                                             "Return", "Media", 
                                                             "Extend", "Warn", 
                                                             "Error", "If", 
                                                             "AtIf", "AtFor", 
                                                             "AtElse", "AtWhile", 
                                                             "AtEach", "From", 
                                                             "To", "Through", 
                                                             "Only", "Not", 
                                                             "And", "Using", 
                                                             "As", "With", 
                                                             "Or", "In", 
                                                             "Default", 
                                                             "Important", 
                                                             "Lparen", "Rparen", 
                                                             "Lbrack", "Rbrack", 
                                                             "BlockStart", 
                                                             "BlockEnd", 
                                                             "Dot", "Comma", 
                                                             "Colon", "Semi", 
                                                             "Tilde", "Under", 
                                                             "Dollar", "At", 
                                                             "Amp", "Hash", 
                                                             "True", "False", 
                                                             "Plus", "Div", 
                                                             "Minus", "Times", 
                                                             "Eq", "NotEq", 
                                                             "Greater", 
                                                             "Less", "Includes", 
                                                             "DashMatch", 
                                                             "Pipe", "Cdo", 
                                                             "Cdc", "PseudoNot", 
                                                             "Calc", "Rotate", 
                                                             "Var", "Rgba", 
                                                             "Repeat", "PrefixMatch", 
                                                             "SuffixMatch", 
                                                             "SubstringMatch", 
                                                             "VendorPrefix", 
                                                             "Variable", 
                                                             "Number", "String_", 
                                                             "Ident" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"stylesheet", "statement", "importDeclaration", "importPath", "asClause", 
		"withClause", "variableDeclaration", "variableValue", "variableName", 
		"namespace_", "propertyDeclaration", "prio", "propertyValue", "mediaDeclaration", 
		"mediaQueryList", "mediaQuery", "mediaExpression", "mixinDeclaration", 
		"contentDeclaration", "fontFaceDeclaration", "keyframesDeclaration", "keyframesBlock", 
		"percentageStatement", "includeDeclaration", "interpolationDeclaration", 
		"extendDeclaration", "warndingDeclaration", "errorDeclaration", "atStatementDeclaration", 
		"ruleset", "block", "selectorGroup", "selector", "combinator", "selectorSequence", 
		"id", "typeSelector", "typeNamespacePrefix", "universal", "className", 
		"interpolation", "parentRef", "attrib", "pseudo", "functionalPseudo", 
		"pseudoParameter", "negation", "negationArg", "operator_", "value", "functionDeclaration", 
		"parameters", "parameter", "functionBody", "functionReturn", "functionStatement", 
		"functionCall", "expression", "expressionPart", "ifExpression", "listDeclaration", 
		"listCommaSeparated", "listSpaceSeparated", "listBracketed", "listElement", 
		"mapDeclaration", "mapEntries", "mapEntry", "mapKey", "mapValue", "ifDeclaration", 
		"elseIfStatement", "elseStatement", "forDeclaration", "through", "whileDeclaration", 
		"eachDeclaration", "eachValueList", "var_", "calc", "rotate", "rgba", 
		"repeat", "unit", "length", "dimension", "percentage", "degree", "measurment", 
		"uri", "arglist", "plusMinus", "hexcolor", "color", "boolean", "number", 
		"identifier",
	];
	public get grammarFileName(): string { return "SCSSParser.g4"; }
	public get literalNames(): (string | null)[] { return SCSSParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return SCSSParser.symbolicNames; }
	public get ruleNames(): string[] { return SCSSParser.ruleNames; }
	public get serializedATN(): number[] { return SCSSParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, SCSSParser._ATN, SCSSParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public stylesheet(): StylesheetContext {
		let localctx: StylesheetContext = new StylesheetContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, SCSSParser.RULE_stylesheet);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 197;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2079834128) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 3574595707) !== 0) || ((((_la - 64)) & ~0x1F) === 0 && ((1 << (_la - 64)) & 1543652563) !== 0)) {
				{
				{
				this.state = 194;
				this.statement();
				}
				}
				this.state = 199;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 200;
			this.match(SCSSParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, SCSSParser.RULE_statement);
		try {
			this.state = 223;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 202;
				this.importDeclaration();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 203;
				this.variableDeclaration();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 204;
				this.propertyDeclaration();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 205;
				this.interpolationDeclaration();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 206;
				this.mediaDeclaration();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 207;
				this.mixinDeclaration();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 208;
				this.contentDeclaration();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 209;
				this.functionDeclaration();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 210;
				this.ifDeclaration();
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 10);
				{
				this.state = 211;
				this.forDeclaration();
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 11);
				{
				this.state = 212;
				this.whileDeclaration();
				}
				break;
			case 12:
				this.enterOuterAlt(localctx, 12);
				{
				this.state = 213;
				this.eachDeclaration();
				}
				break;
			case 13:
				this.enterOuterAlt(localctx, 13);
				{
				this.state = 214;
				this.fontFaceDeclaration();
				}
				break;
			case 14:
				this.enterOuterAlt(localctx, 14);
				{
				this.state = 215;
				this.keyframesDeclaration();
				}
				break;
			case 15:
				this.enterOuterAlt(localctx, 15);
				{
				this.state = 216;
				this.includeDeclaration();
				}
				break;
			case 16:
				this.enterOuterAlt(localctx, 16);
				{
				this.state = 217;
				this.extendDeclaration();
				}
				break;
			case 17:
				this.enterOuterAlt(localctx, 17);
				{
				this.state = 218;
				this.warndingDeclaration();
				}
				break;
			case 18:
				this.enterOuterAlt(localctx, 18);
				{
				this.state = 219;
				this.errorDeclaration();
				}
				break;
			case 19:
				this.enterOuterAlt(localctx, 19);
				{
				this.state = 220;
				this.ruleset();
				}
				break;
			case 20:
				this.enterOuterAlt(localctx, 20);
				{
				this.state = 221;
				this.atStatementDeclaration();
				}
				break;
			case 21:
				this.enterOuterAlt(localctx, 21);
				{
				this.state = 222;
				this.percentageStatement();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public importDeclaration(): ImportDeclarationContext {
		let localctx: ImportDeclarationContext = new ImportDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, SCSSParser.RULE_importDeclaration);
		let _la: number;
		try {
			this.state = 248;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 15:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 225;
				this.match(SCSSParser.Import);
				this.state = 226;
				this.importPath();
				this.state = 228;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===59) {
					{
					this.state = 227;
					this.match(SCSSParser.Semi);
					}
				}

				}
				break;
			case 18:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 230;
				this.match(SCSSParser.Require);
				this.state = 231;
				this.importPath();
				this.state = 233;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===59) {
					{
					this.state = 232;
					this.match(SCSSParser.Semi);
					}
				}

				}
				break;
			case 17:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 235;
				this.match(SCSSParser.Use);
				this.state = 236;
				this.importPath();
				this.state = 238;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===44) {
					{
					this.state = 237;
					this.asClause();
					}
				}

				this.state = 241;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===45) {
					{
					this.state = 240;
					this.withClause();
					}
				}

				this.state = 244;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===59) {
					{
					this.state = 243;
					this.match(SCSSParser.Semi);
					}
				}
